# SuperHeroesGame

./: Admin.cpp  Admin.h  AttackResult.cpp  AttackResult.h  CMakeLists.txt  Game.cpp  Game.h  Game.txt  GameMenu.cpp  GameMenu.h  Market.cpp  Market.h  MarketSaleResult.cpp  MarketSaleResult.h  MyString.cpp  Player.cpp  Player.h  README.md  RequestReturnModel.hpp  SharedPtr.hpp  SuperHero.cpp  SuperHero.h  SuperHeroesGame.cpp  User.cpp  User.h  UserRole.h  Validator.cpp  Validator.h  Vector.hpp
